add socket func and fix connection problems

--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
 		<input class="message" type="text" id="m" autocomplete="off">
 		<button>send</button>
   </form>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="js.main.js"></script>
+  <script src="socket.io/socket.io.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
 
